tests/errors/syn_method23.java
public class syn_method23 {
public static int[] main ( {
 
}
}